fixed help section collapse issue

--- a/public/css/rektmain.css
+++ b/public/css/rektmain.css
@@ -158,7 +158,7 @@ body {
 }
 
 .riotLicense {
-  margin-top: 520px;
+  margin-top: 70px;
   text-align: center;
   bottom: 25px;
 }
